[gd_scene load_steps=22 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Position.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]
[ext_resource path="res://assets/ThaleahFat.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/tdlip.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/gameover.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 320 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 320 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 25
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 25
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=10]
action = "ui_select"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "ui_cancel"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="DynamicFont" id=14]
size = 70
outline_size = 10
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 5 )

[node name="Game" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.12549, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -340.0
margin_right = 320.0
margin_bottom = 360.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Node2D" parent="CenterContainer/HBoxContainer"]
position = Vector2( 32, 34 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BackgroundBorder" type="ColorRect" parent="CenterContainer/HBoxContainer/Board"]
margin_left = -2.0
margin_top = -2.0
margin_right = 322.0
margin_bottom = 642.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.921569, 0.858824, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CenterContainer/HBoxContainer/Board"]
margin_right = 320.0
margin_bottom = 640.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPosition" type="Position2D" parent="CenterContainer/HBoxContainer/Board"]
position = Vector2( 176, -16 )
z_index = -1

[node name="Roof" type="Area2D" parent="CenterContainer/HBoxContainer/Board"]
position = Vector2( 160, -16 )
z_index = 1
collision_layer = 16
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="ColorRect" parent="CenterContainer/HBoxContainer/Board/Roof"]
margin_left = -160.0
margin_top = -27.0
margin_right = 160.0
margin_bottom = 14.0
color = Color( 0.113725, 0.12549, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Hide blocks"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/HBoxContainer/Board/Roof"]
shape = SubResource( 1 )

[node name="Floor" type="StaticBody2D" parent="CenterContainer/HBoxContainer/Board"]
position = Vector2( 160, 656 )
collision_layer = 4
collision_mask = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/HBoxContainer/Board/Floor"]
shape = SubResource( 2 )

[node name="WallLeft" type="StaticBody2D" parent="CenterContainer/HBoxContainer/Board"]
position = Vector2( -16, 320 )
collision_layer = 4
collision_mask = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/HBoxContainer/Board/WallLeft"]
shape = SubResource( 3 )

[node name="WallRight" type="StaticBody2D" parent="CenterContainer/HBoxContainer/Board"]
position = Vector2( 336, 320 )
collision_layer = 4
collision_mask = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/HBoxContainer/Board/WallRight"]
shape = SubResource( 4 )

[node name="FallingTimer" type="Timer" parent="CenterContainer/HBoxContainer/Board"]
wait_time = 0.5
__meta__ = {
"_editor_description_": "Timer to move block to down"
}

[node name="PositionCursor" type="Node2D" parent="CenterContainer/HBoxContainer/Board"]

[node name="Position_00" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 624 )

[node name="Position_01" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 592 )

[node name="Position_02" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 560 )

[node name="Position_03" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 528 )

[node name="Position_04" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 496 )

[node name="Position_05" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 464 )

[node name="Position_06" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 432 )

[node name="Position_07" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 400 )

[node name="Position_08" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 368 )

[node name="Position_09" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 336 )

[node name="Position_10" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 304 )

[node name="Position_11" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 272 )

[node name="Position_12" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 240 )

[node name="Position_13" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 208 )

[node name="Position_14" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 176 )

[node name="Position_15" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 144 )

[node name="Position_16" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 112 )

[node name="Position_17" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 80 )

[node name="Position_18" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 48 )

[node name="Position_19" parent="CenterContainer/HBoxContainer/Board/PositionCursor" instance=ExtResource( 2 )]
position = Vector2( 0, 16 )

[node name="CleanLineSFX" type="AudioStreamPlayer2D" parent="CenterContainer/HBoxContainer/Board"]
stream = ExtResource( 6 )

[node name="GameOverSFX" type="AudioStreamPlayer" parent="CenterContainer/HBoxContainer/Board"]
stream = ExtResource( 8 )

[node name="GUI" type="Control" parent="CenterContainer/HBoxContainer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerNextBlock" type="VBoxContainer" parent="CenterContainer/HBoxContainer/GUI"]
margin_left = 432.0
margin_top = 114.0
margin_right = 592.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBlockLabel" type="Label" parent="CenterContainer/HBoxContainer/GUI/ContainerNextBlock"]
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
text = "NEXT"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/GUI/ContainerNextBlock"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 188.0

[node name="BackgroundBorder" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerNextBlock/CenterContainer"]
show_behind_parent = true
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
color = Color( 0.921569, 0.858824, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerNextBlock/CenterContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 159.0
rect_min_size = Vector2( 158, 158 )
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBlockPosition" type="Position2D" parent="CenterContainer/HBoxContainer/GUI/ContainerNextBlock/CenterContainer"]
position = Vector2( 80, 80 )

[node name="ContainerScore" type="VBoxContainer" parent="CenterContainer/HBoxContainer/GUI"]
margin_left = 432.0
margin_top = 323.0
margin_right = 561.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CenterContainer/HBoxContainer/GUI/ContainerScore"]
margin_right = 129.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_outline_modulate = Color( 0.658824, 0.6, 0.517647, 1 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBackground" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerScore"]
margin_top = 28.0
margin_right = 129.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 32 )
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundBorder" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerScore/ScoreBackground"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 131.0
margin_bottom = 34.0
color = Color( 0.921569, 0.858824, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="CenterContainer/HBoxContainer/GUI/ContainerScore/ScoreBackground"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_outline_modulate = Color( 0.658824, 0.6, 0.517647, 1 )
text = "000000000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerLines" type="VBoxContainer" parent="CenterContainer/HBoxContainer/GUI"]
margin_left = 432.0
margin_top = 402.0
margin_right = 561.0
margin_bottom = 471.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesLabel" type="Label" parent="CenterContainer/HBoxContainer/GUI/ContainerLines"]
margin_right = 129.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_outline_modulate = Color( 0.658824, 0.6, 0.517647, 1 )
text = "LINES"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesBackground" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerLines"]
margin_top = 28.0
margin_right = 129.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 32 )
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundBorder" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ContainerLines/LinesBackground"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 131.0
margin_bottom = 34.0
color = Color( 0.921569, 0.858824, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesCount" type="Label" parent="CenterContainer/HBoxContainer/GUI/ContainerLines/LinesBackground"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_outline_modulate = Color( 0.658824, 0.6, 0.517647, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/GUI"]
margin_left = 432.0
margin_top = 514.0
margin_right = 561.0
margin_bottom = 586.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRetry" type="Button" parent="CenterContainer/HBoxContainer/GUI/ButtonContainer"]
visible = false
margin_right = 129.0
margin_bottom = 34.0
theme = ExtResource( 3 )
text = "RETRY"

[node name="ButtonPauseResume" type="Button" parent="CenterContainer/HBoxContainer/GUI/ButtonContainer"]
margin_right = 129.0
margin_bottom = 34.0
theme = ExtResource( 3 )
shortcut = SubResource( 11 )
text = "PAUSE"

[node name="Separator" type="ColorRect" parent="CenterContainer/HBoxContainer/GUI/ButtonContainer"]
margin_top = 38.0
margin_right = 129.0
margin_bottom = 54.0
rect_min_size = Vector2( 100, 16 )
color = Color( 0.113725, 0.12549, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="CenterContainer/HBoxContainer/GUI/ButtonContainer"]
margin_top = 58.0
margin_right = 129.0
margin_bottom = 92.0
theme = ExtResource( 3 )
shortcut = SubResource( 13 )
text = "QUIT"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/GUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 317.5
margin_right = 350.0
margin_bottom = 382.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="CenterContainer/HBoxContainer/GUI/CenterContainer"]
margin_right = 302.0
margin_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_shadow = Color( 0.658824, 0.6, 0.517647, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="CenterContainer/HBoxContainer/GUI/CenterContainer"]
margin_left = 63.0
margin_right = 238.0
margin_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_shadow = Color( 0.658824, 0.6, 0.517647, 1 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gameover" from="CenterContainer/HBoxContainer/Board" to="CenterContainer/HBoxContainer/GUI" method="_on_Board_gameover"]
[connection signal="update_next_block" from="CenterContainer/HBoxContainer/Board" to="CenterContainer/HBoxContainer/GUI" method="_on_Board_update_next_block"]
[connection signal="update_score" from="CenterContainer/HBoxContainer/Board" to="CenterContainer/HBoxContainer/GUI" method="_on_Board_update_score"]
[connection signal="body_entered" from="CenterContainer/HBoxContainer/Board/Roof" to="CenterContainer/HBoxContainer/Board" method="_on_Roof_body_entered"]
[connection signal="timeout" from="CenterContainer/HBoxContainer/Board/FallingTimer" to="CenterContainer/HBoxContainer/Board" method="_on_FallingTimer_timeout"]
[connection signal="change_game_state" from="CenterContainer/HBoxContainer/GUI" to="CenterContainer/HBoxContainer/Board" method="_on_GUI_change_game_state"]
[connection signal="restart_game" from="CenterContainer/HBoxContainer/GUI" to="CenterContainer/HBoxContainer/Board" method="_on_GUI_restart_game"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/GUI/ButtonContainer/ButtonRetry" to="CenterContainer/HBoxContainer/GUI" method="_on_ButtonRetry_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/GUI/ButtonContainer/ButtonPauseResume" to="CenterContainer/HBoxContainer/GUI" method="_on_ButtonPauseResume_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/GUI/ButtonContainer/ButtonQuit" to="CenterContainer/HBoxContainer/GUI" method="_on_ButtonQuit_pressed"]
